NEW: Add partial character modification